# MacTweaks

./: .gitignore  OwnershipFix.command  README.md
MacTweaks/: MacTweaks.sln
MacTweaks/Helpers/: AccessibilityHelpers.cs  CGHelpers.cs
MacTweaks/MacTweaks/: AppDelegate.cs  Build.command  Entitlements.plist  Info.plist  MacTweaks.csproj  MacTweaksAXUIStub.dylib  Main.cs  Main.storyboard  ViewController.cs  ViewController.designer.cs  packages.config
MacTweaks/MacTweaks/Helpers/: AccessibilityHelpers.cs  AppHelpers.cs  BinaryHelpers.cs  CGHelpers.cs  ConstantHelpers.cs  RootTerminal.cs  TerminalCommand.cs  ThreadHelpers.cs
MacTweaks/MacTweaks/MacTweaksAXUIStub.dylib.dSYM/Contents/: Info.plist
MacTweaks/MacTweaks/Modules/: DockDebugModule.cs  DockModule.cs  IModule.cs  ISudoModule.cs
MacTweaks/MacTweaks/Modules/Application/: ApplicationBlacklist.cs
MacTweaks/MacTweaks/Modules/Clipboard/: CutModule.cs
MacTweaks/MacTweaks/Modules/Clipboarding/: CutModule.cs
MacTweaks/MacTweaks/Modules/Credentials/: BypassAskForPasswordModule.cs
MacTweaks/MacTweaks/Modules/Debugging/: GCStresser.cs
MacTweaks/MacTweaks/Modules/Dock/: DockDebugModule.cs  DockModule.cs
MacTweaks/MacTweaks/Modules/Energy/: LowPowerMode.cs
MacTweaks/MacTweaks/Views/: RectDrawView.cs  ViewController.cs  ViewController.designer.cs
MacTweaksAXUIStub/: BuildDylib Debug.command  BuildDylib.command  CMakeLists.txt  brightness.c  main.h  main.m
MacTweaksNative/: BuildDylib Debug.command  BuildDylib.command  CMakeLists.txt  MacTweaksNative.dylib  brightness.h  main.h  main.m
(+11 files in other folders)
